# stamp-album-pro

./: .gitignore  COLUMN_LAYOUT_ANALYSIS.md  CONTEXT.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MANIFEST.in  Makefile  README.md  V3improv.md  build.sh  conftest.py  pyproject.toml  stamp-album.spec  stamp_album.spec  test_column_layout.dsl
.github/workflows/: ci.yml
assets/templates/: sample_album.txt
docs/: BUILD.md  DSL_SPEC.md  FEATURE_SPEC.md  albumeasy-dsl-reference.md
launcher/: README.md  make-app.sh  stamp-album.bat  stamp-album.command  stamp-album.desktop
src/stamp_album/: __init__.py  __main__.py  api.py  cloud_sync.py  collection.py  desktop.py  font_pairings.py  serve.py  templates.py  version_history.py
src/stamp_album/.ipynb_checkpoints/: api-checkpoint.py
src/stamp_album/core/: __init__.py  models.py  parser.py  serializer.py
src/stamp_album/core/.ipynb_checkpoints/: serializer-checkpoint.py
src/stamp_album/engines/: __init__.py  font_manager.py  layout_engine.py  pdf_generator.py
src/stamp_album/ui/: __init__.py  config_dialog.py  editor.py  main_window.py  preview_panel.py  syntax_highlighter.py  template_gallery.py  visual_builder.py
src/stamp_album/web/: app.js  borders.js  canvas.css  canvas.js  canvas_layout.js  collection.js  color_palette.js  drag_drop_builder.js  dsl.js  events.js  export.js  files.js  index.html  init.js  render.js  style.css  tutorial.js  undo.js  version_history.js  websocket_preview.js  wizard.js
src/tests/: conftest.py  test_auto_layout.py  test_build_items.py  test_cloud_sync.py  test_collection.py  test_column_layout.py  test_column_rendering.py  test_desktop_and_export.py  test_drag_drop.py  test_inline_formatting.py  test_low_complexity.py  test_models.py  test_parser.py  test_roundtrip.py  test_typography.py  test_validation.py  test_version_history.py  test_websocket.py
templates/: README.md  template-1col-quadrille.slbum  template-2col-compact.slbum  template-2col-europe.slbum  template-3col-worldwide.slbum
