[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stamp-album-pro"
version = "0.1.0"
description = "Modern stamp album typesetter with live preview and advanced typography"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Stamp Album Pro Contributors"}
]
keywords = ["stamp", "album", "pdf", "typesetter", "philately"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Printing",
]

dependencies = [
    "WeasyPrint>=59.0",
    "tinycss2>=1.5",
    "Pillow>=10.0",
    "fonttools>=4.40",
    "PyYAML>=6.0",
    "lark>=1.1",
    "PyMuPDF>=1.23",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pywebview>=5.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pyinstaller>=6.0",
]
legacy = [
    "PyQt6>=6.4",
]

[project.scripts]
stamp-album = "stamp_album.__main__:main"
stamp-album-web = "stamp_album.serve:main"
stamp-album-desktop = "stamp_album.desktop:main"
stamp-album-browser = "stamp_album.serve:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["src/tests"]
qt_api = "pyqt6"
